add basic html structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <title>My Personal Website</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>
+      Hello, <br />
+      World!
+    </h1>
+    <h1>I'm Sam.</h1>
+
+    <h2>about me</h2>
+
+    <h2>portfolio</h2>
+
+    <button>Contact me</button>
+
     <script src="script.js"></script>
   </body>
 </html>
