add contact button

--- a/index.html
+++ b/index.html
@@ -12,10 +12,33 @@
     <h1>I'm Sam.</h1>
 
     <h2>about me</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur
+      suscipit aspernatur non quisquam, sed alias ducimus temporibus ullam
+      beatae officiis, modi doloribus recusandae corrupti, harum repudiandae
+      iusto? Soluta esse distinctio animi doloribus, eius voluptas facere
+      aspernatur fugit illo. Est obcaecati consequatur reprehenderit itaque eius
+      qui nemo, rem animi adipisci asperiores vel ex quaerat nam rerum? Quam
+      veniam error, aut aliquid quos explicabo distinctio commodi nihil
+      aspernatur culpa laborum alias voluptatibus voluptatem! Ea nesciunt facere
+      laborum voluptas doloremque nostrum, veritatis eum rerum similique
+      sapiente accusamus quibusdam aut reprehenderit excepturi neque, commodi
+      officiis quo repellat. In, repellendus fugiat! Deleniti voluptas
+      doloremque minus praesentium minima itaque vel perferendis ea ratione,
+      debitis, nemo distinctio sint facilis voluptate id ducimus assumenda
+      labore. Facilis ea doloribus incidunt harum! Magni architecto repellendus
+      reiciendis quis illo voluptatibus. Molestias delectus veritatis dolorem
+      saepe dolores? Qui, est, quibusdam nulla, fugiat atque consequuntur dolor
+      aspernatur aliquid enim assumenda ex perferendis ipsam ut recusandae
+      deleniti totam corporis eligendi! Eveniet adipisci nemo laudantium
+      obcaecati! Voluptatum sit quod fugit dolore earum omnis eligendi
+      repudiandae tempora, iure nostrum officiis, natus dicta animi accusamus
+      eos eum. Dicta totam nostrum, nulla, expedita impedit eius amet distinctio
+      asperiores saepe numquam, suscipit facilis necessitatibus! Aperiam at
+      perspiciatis cumque.
+    </p>
 
     <h2>portfolio</h2>
-
-    <button>Contact me</button>
 
     <script src="script.js"></script>
   </body>
