--- a/index.html
+++ b/index.html
@@ -2,43 +2,42 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
-    <title>My Personal Website</title>
+    <title>Home</title>
   </head>
   <body>
+    <navbar>
+      <button id="btn" onclick="window.location='#contact-info';">get in touch</button>
+    </navbar>
     <h1>
       Hello, <br />
-      World!
+      World!<br />
+      I'm Sam.
     </h1>
-    <h1>I'm Sam.</h1>
 
-    <h2>about me</h2>
+    <p>	&#8595</p>
+
+    <h2>About me</h2>
+
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tenetur
-      suscipit aspernatur non quisquam, sed alias ducimus temporibus ullam
-      beatae officiis, modi doloribus recusandae corrupti, harum repudiandae
-      iusto? Soluta esse distinctio animi doloribus, eius voluptas facere
-      aspernatur fugit illo. Est obcaecati consequatur reprehenderit itaque eius
-      qui nemo, rem animi adipisci asperiores vel ex quaerat nam rerum? Quam
-      veniam error, aut aliquid quos explicabo distinctio commodi nihil
-      aspernatur culpa laborum alias voluptatibus voluptatem! Ea nesciunt facere
-      laborum voluptas doloremque nostrum, veritatis eum rerum similique
-      sapiente accusamus quibusdam aut reprehenderit excepturi neque, commodi
-      officiis quo repellat. In, repellendus fugiat! Deleniti voluptas
-      doloremque minus praesentium minima itaque vel perferendis ea ratione,
-      debitis, nemo distinctio sint facilis voluptate id ducimus assumenda
-      labore. Facilis ea doloribus incidunt harum! Magni architecto repellendus
-      reiciendis quis illo voluptatibus. Molestias delectus veritatis dolorem
-      saepe dolores? Qui, est, quibusdam nulla, fugiat atque consequuntur dolor
-      aspernatur aliquid enim assumenda ex perferendis ipsam ut recusandae
-      deleniti totam corporis eligendi! Eveniet adipisci nemo laudantium
-      obcaecati! Voluptatum sit quod fugit dolore earum omnis eligendi
-      repudiandae tempora, iure nostrum officiis, natus dicta animi accusamus
-      eos eum. Dicta totam nostrum, nulla, expedita impedit eius amet distinctio
-      asperiores saepe numquam, suscipit facilis necessitatibus! Aperiam at
-      perspiciatis cumque.
+      I'm a full-time student studying software engineering.
+      My passion for software engineering is fueled by the opportunity to merge creativity with functionality, particularly in web development. 
+      I've always been drawn to the intersection of technology and design and enjoy optimizing user experiences.
+      My goal is to help create solutions that solve real-world problems and enhance people's lives. Whether it's developing sleek user interfaces or optimizing algorithms for maximum efficiency, I'm driven by the challenge of turning ideas into reality.
     </p>
+    <p>In my free time, you can find me practicing yoga, hiking, or snowboarding. </p>
 
-    <h2>portfolio</h2>
+    <h2>Portfolio</h2>
+
+    <p>coming soon...</p>
+
+    <footer id="contact-info">
+      <hr>
+      <ul>
+          <li>Call me <br>(626)233-9887</li>
+         <li>Email me <br> <a href="https://mail.google.com/mail/u/0/#inbox"> samantha.n.cabrera@gmail.com</a></li>
+        <li>Find me <br> <a href="https://www.linkedin.com/in/samantha-cabrera-226458254/"> LinkedIn</a></li>
+      </ul>
+    </footer>
 
     <script src="script.js"></script>
   </body>
